packages/kit/test/apps/basics/src/routes/errors/module-scope-client/+page.svelte
<script context="module">
	import { browser } from '$app/env';

	if (browser) {
		throw new Error('Crashing now');
	}
</script>
